<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/contentframe"
    >
    <TextView
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="5dp"
        android:layout_marginBottom="5dp"

        />
    <TextView
        android:id="@+id/theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/theme"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="5dp"
        android:layout_alignTop="@id/type"
        android:layout_alignParentRight="true"
        />
    <ImageView
        android:id="@+id/addr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/addr"
        android:layout_below="@id/type"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="2dp"
        />
    <TextView
        android:id="@+id/place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place"
        android:textSize="16sp"
        android:layout_below="@id/type"
        android:layout_toRightOf="@id/addr"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        />
    <ImageView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/time"
        android:layout_below="@id/place"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="5dp"
        />
    <TextView
        android:id="@+id/activityTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activityTime"
        android:textSize="16sp"
        android:layout_below="@id/place"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@id/time"
        />
    <ImageView
        android:id="@+id/moneycost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/cost"
        android:layout_below="@id/activityTime"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="2dp"
        />
    <TextView
        android:id="@+id/costdesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/costdesc"
        android:textSize="16sp"
        android:layout_below="@id/activityTime"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@id/moneycost"
        />
    <TextView
        android:id="@+id/cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cost"
        android:textSize="16sp"
        android:layout_alignTop="@id/costdesc"
        android:layout_toRightOf="@id/costdesc"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        />

    <TextView
        android:id="@+id/paymentMethod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paymentMethod"
        android:textSize="16sp"
        android:layout_alignTop="@id/costdesc"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        />
    <TextView
        android:id="@+id/paymentMethoddesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paymentMethoddesc"
        android:textSize="16sp"
        android:layout_alignTop="@id/costdesc"
        android:layout_toLeftOf="@id/paymentMethod"
        />

    <ImageView
        android:id="@+id/account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/account"
        android:layout_below="@id/costdesc"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="2dp"
        />
    <TextView
        android:id="@+id/currentNumberdesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currentNumberdesc"
        android:textSize="16sp"
        android:layout_below="@id/costdesc"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="5dp"
        android:layout_toRightOf="@id/account"
        />
    <TextView
        android:id="@+id/currentNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currentNumber"
        android:textSize="16sp"
        android:layout_below="@id/costdesc"
        android:layout_toRightOf="@id/currentNumberdesc"
        android:layout_marginLeft="5dp"
        />

    <TextView
        android:id="@+id/totalNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/totalNumber"
        android:textSize="16sp"
        android:layout_alignTop="@id/currentNumberdesc"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        />

    <TextView
        android:id="@+id/totalNumberdesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/totalNumberdesc"
        android:textSize="16sp"
        android:layout_alignTop="@id/currentNumberdesc"
        android:layout_toLeftOf="@id/totalNumber"
        />
</RelativeLayout>