<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:descendantFocusability="blocksDescendants"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/remakemidborde"
        >
        <TextView
            android:id="@+id/releasetime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/releasetime"
            android:textSize="18sp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            />

        <TextView
            android:id="@+id/exetype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="5dp"
            android:layout_alignTop="@id/releasetime"
            android:layout_marginLeft="10dp"
            />


        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/releasetime"
            android:textSize="18sp"
            android:layout_alignTop="@id/releasetime"
            android:layout_toLeftOf="@id/releasetime"
            android:layout_marginRight="5dp"
            />
        <ImageView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/signtitle"
            android:layout_below="@id/exetype"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="5dp"
            />
        <TextView
            android:id="@+id/exetitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/exetype"
            android:layout_toRightOf="@id/time"
            android:text="@string/title"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            />
        <ImageView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/time"
            android:layout_below="@id/exetitle"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="5dp"
            />
        <TextView
            android:id="@+id/exetime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/exetitle"
            android:layout_toRightOf="@id/time"
            android:text="@string/activityTime"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            />

        <ImageView
            android:id="@+id/addr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/addr"
            android:layout_below="@id/exetime"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="11dp"
            android:layout_marginRight="5dp"
            />
        <TextView
            android:id="@+id/exeplace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/exetime"
            android:layout_toRightOf="@id/addr"
            android:text="@string/place"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            />
        <View
            android:id="@+id/midview"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/exeplace"
            android:background="@color/common_bottom_bar_selected_bg"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            />

        <LinearLayout
            android:id="@+id/main_bottom"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_below="@id/midview"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            >
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                >
                <Button
                    android:id="@+id/cancelExe"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:text="取消活动"
                    android:textSize="18sp"
                    android:textColor="@drawable/fontchoice"
                    android:background="@drawable/nobordebtnwithblue"
                    />
            </RelativeLayout>
            <RelativeLayout

                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                >
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:text="讨论组"
                    android:textSize="18sp"
                    android:textColor="@drawable/fontchoice"
                    android:background="@drawable/nobordebtnwithblue"
                    />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>